crates/ridge-parser/tests/snapshots/snapshots__actor_mailbox_bounded_drop_oldest.snap
---
source: crates/ridge-parser/tests/snapshots.rs
assertion_line: 247
expression: result.module
---
Module {
    items: [
        Actor(
            ActorDecl {
                vis: Private,
                name: Ident {
                    text: "Window",
                    span: Span {
                        start: 6,
                        end: 12,
                    },
                },
                members: [
                    Mailbox(
                        MailboxDecl {
                            config: Bounded {
                                capacity: 5,
                                policy: DropOldest,
                            },
                            span: Span {
                                start: 19,
                                end: 48,
                            },
                        },
                    ),
                    State(
                        StateDecl {
                            name: Ident {
                                text: "n",
                                span: Span {
                                    start: 59,
                                    end: 60,
                                },
                            },
                            ty: Primitive {
                                name: Int,
                                span: Span {
                                    start: 62,
                                    end: 65,
                                },
                            },
                            default: Some(
                                Literal(
                                    IntDec {
                                        raw: "0",
                                        span: Span {
                                            start: 68,
                                            end: 69,
                                        },
                                    },
                                ),
                            ),
                            span: Span {
                                start: 53,
                                end: 69,
                            },
                        },
                    ),
                    On(
                        OnHandler {
                            caps: [],
                            name: Ident {
                                text: "tick",
                                span: Span {
                                    start: 77,
                                    end: 81,
                                },
                            },
                            params: [],
                            ret: None,
                            body: Assign {
                                target: Ident(
                                    Ident {
                                        text: "n",
                                        span: Span {
                                            start: 84,
                                            end: 85,
                                        },
                                    },
                                ),
                                value: Binary {
                                    op: Add,
                                    lhs: Ident(
                                        Ident {
                                            text: "n",
                                            span: Span {
                                                start: 89,
                                                end: 90,
                                            },
                                        },
                                    ),
                                    rhs: Literal(
                                        IntDec {
                                            raw: "1",
                                            span: Span {
                                                start: 93,
                                                end: 94,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 89,
                                        end: 94,
                                    },
                                },
                                span: Span {
                                    start: 84,
                                    end: 94,
                                },
                            },
                            span: Span {
                                start: 74,
                                end: 94,
                            },
                            doc: None,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 94,
                },
                doc: None,
            },
        ),
    ],
    doc: [],
    span: Span {
        start: 0,
        end: 95,
    },
}
