crates/ridge-parser/tests/snapshots/snapshots__actor_mailbox_bounded_error.snap
---
source: crates/ridge-parser/tests/snapshots.rs
assertion_line: 223
expression: result.module
---
Module {
    items: [
        Actor(
            ActorDecl {
                vis: Private,
                name: Ident {
                    text: "Queue",
                    span: Span {
                        start: 6,
                        end: 11,
                    },
                },
                members: [
                    Mailbox(
                        MailboxDecl {
                            config: Bounded {
                                capacity: 10,
                                policy: Error,
                            },
                            span: Span {
                                start: 18,
                                end: 42,
                            },
                        },
                    ),
                    State(
                        StateDecl {
                            name: Ident {
                                text: "n",
                                span: Span {
                                    start: 53,
                                    end: 54,
                                },
                            },
                            ty: Primitive {
                                name: Int,
                                span: Span {
                                    start: 56,
                                    end: 59,
                                },
                            },
                            default: Some(
                                Literal(
                                    IntDec {
                                        raw: "0",
                                        span: Span {
                                            start: 62,
                                            end: 63,
                                        },
                                    },
                                ),
                            ),
                            span: Span {
                                start: 47,
                                end: 63,
                            },
                        },
                    ),
                    On(
                        OnHandler {
                            caps: [],
                            name: Ident {
                                text: "tick",
                                span: Span {
                                    start: 71,
                                    end: 75,
                                },
                            },
                            params: [],
                            ret: None,
                            body: Assign {
                                target: Ident(
                                    Ident {
                                        text: "n",
                                        span: Span {
                                            start: 78,
                                            end: 79,
                                        },
                                    },
                                ),
                                value: Binary {
                                    op: Add,
                                    lhs: Ident(
                                        Ident {
                                            text: "n",
                                            span: Span {
                                                start: 83,
                                                end: 84,
                                            },
                                        },
                                    ),
                                    rhs: Literal(
                                        IntDec {
                                            raw: "1",
                                            span: Span {
                                                start: 87,
                                                end: 88,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 83,
                                        end: 88,
                                    },
                                },
                                span: Span {
                                    start: 78,
                                    end: 88,
                                },
                            },
                            span: Span {
                                start: 68,
                                end: 88,
                            },
                            doc: None,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 88,
                },
                doc: None,
            },
        ),
    ],
    doc: [],
    span: Span {
        start: 0,
        end: 89,
    },
}
